# sandbox

./: .gitignore  all.org  astoroid.py  barf_org_files.sh  cyborg_reader.md  eth_yellow_summary.org  gears.py  myhonestfeedback_com.md  myhonestfeedback_com.rm  projective_coords.py  recording_proxy.py  redc.py  uncurated.org  watbot.py
decrypt_keystore/: decrypt_keystore.py
elliptic_tales/: p56.py
flask_balance_shower/: balance_.py
go_ethclient/: abandoned_addresses.go  main.go
manim_play/: astoroid.py  axes_sanity.py  ballistic.py  dots.py  fuzzy_graph.py  goof.py  graphing.py  line_graph.py  magical_default_args.py  moving_angle.py  timing.py  wah.py  zip_zap_rap.py
micropython/: boot.py  foo.py
myrustworkspace/add-one/: Cargo.toml
myrustworkspace/adder/: Cargo.toml
nphard_group/: the_nat_nums.py
org/: bit1.org
py-evm/: bar.py  foo.py  get_balance.py  mine.py  mine2.py  mine3.py
python_incubator/: setup.py
python_incubator/astoroid/: __init__.py
python_incubator/optigraph/: __init__.py
python_incubator/polynomier/: __init__.py  __init__2.0.py
python_incubator/projective/: __init__.py
rust/: .gitignore
rust/bevy-tut/: Cargo.toml
rust/bevy-tut/src/: main.rs
rust/bk-tree-play/: Cargo.toml
rust/bk-tree-play/src/: main.rs
rust/burger-chef/: Cargo.toml
rust/burger-chef/src/: main.rs
rust/cbor_play/: Cargo.toml
rust/cbor_play/src/: main.rs
rust/clap_play/: Cargo.toml
rust/clap_play/src/: main.rs
rust/clispell/: .gitignore  Cargo.toml
rust/clispell/src/: main.rs
rust/contraction/: Cargo.toml
rust/contraction/src/: main.rs
rust/crates_io_api_play/: Cargo.toml
rust/crates_io_api_play/src/: main.rs
rust/curse/: Cargo.toml
rust/curse/src/: main.rs
rust/cursive_play/: Cargo.toml
rust/cursive_play/src/: main.rs
rust/dsfs/: Cargo.toml  README.md
rust/dsfs/src/: main.rs
rust/ethers_play/: Cargo.toml
rust/ethers_play/src/: lib.rs
rust/flargs/: Cargo.toml
rust/flargs_play/: Cargo.toml
rust/flargs_play/src/: main.rs
rust/foo/: Cargo.toml
rust/foo/src/: lib.rs  main.rs
rust/hello-rocket/src/: main.rs
rust/hello-rocket/static/: README
rust/japanezeu/: Cargo.toml  README.md
rust/japanezeu/src/: main.rs
rust/piston_play/: Cargo.toml
rust/piston_play/src/: main.rs
rust/rocket-sqlx/: .gitignore  Cargo.toml
rust/rocket-sqlx/src/: main.rs
rust/spel/: Cargo.toml  README.md
rust/spel/src/: main.rs
rust/spelib/: Cargo.toml
rust/spelib/src/: lib.rs
rust/spellib/: Cargo.toml
rust/spellib/src/: main.rs
rust/web3/transport_http/: Cargo.toml
rust/web3/transport_http/src/: main.rs
rust_tut/: Cargo.toml
trinity/: girly.json  mine.py  run.sh
trio/: echo_client.py  echo_server.py
trombone/: Cargo.toml
trombone/src/: lib.rs  main.rs
wasm/canvas/: index.html
wasm/char/: README.md  index.html  index.js
wasm/closures/: index.html
wasm/console_log/: index.html
wasm/dom/: index.html
wasm/fetch/: index.html
wasm/julia/: Cargo.toml  index.html
wasm/minimal/: README.md  index.html
wasm/minimal/src/: lib.rs
wasm/minimal_but_better/: Cargo.toml  README.md  index.html
wasm/minimal_but_better/src/: lib.rs
wasm/serde_play/: Cargo.toml  index.html
wasm/serde_play/src/: lib.rs
wasm/web3minimal/: Cargo.toml  README.md
wasm/web3minimal/src/: lib.rs
wasm/webaudio/: index.html
zk/: m.py  zk.py  zk2.py
