[package]
name = "bk-tree-play"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bk-tree = { path = "/Users/mburr/git/rust-bk-tree", features = ["serde-support"] }
serde_cbor = "0.11.1"
serde_derive = "1.0.126"
