[package]
name = "contraction"
version = "0.1.0"
authors = ["mburr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [build-dependencies]
# ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"], tag = "0.2.0" }

[dependencies]
#ethers = { git = "https://github.com/gakonst/ethers-rs", tag = "0.2.0" }
ethers = "0.2.2"
serde_json = "1.0"
