version = "0.1.0"
authors = ["Mike Burr <mb@unintuitive.org>"]
edition = "2018"
description = "Dead Simple File Server -- The missing Rust development web server."
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/stnbu/dsfs"

[package]
name = "dsfs"
version = "0.0.1"
edition = "2018"

[dependencies]
rocket = "0.4.10"
rocket_contrib = "0.4.10"


