[package]
name = "foo"
version = "0.1.0"
authors = ["mburr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
tokio = { version = "1.7.1", features = ["full"] }
# web3 = "0.15.0"
# #tokio = "1.7.1"
# tokio = { version = "1.0", optional = true, features = ["full"] }
# tokio-stream = { version = "0.1", optional = true }
# tokio-util = { version = "0.6", optional = true, features = ["compat", "io"] }