[package]
name = "web3minimal"
version = "0.0.1"
authors = ["Mike Burr <mb@unintuitive.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
getrandom = { version = "0.2.3", features = ["js"] }
web3 = { version = "0.15.0", features = [], default-features = false }
wasm-bindgen-futures = "0.4.24"

[dependencies.web-sys]
version = "0.3.4"
